<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DialogFragmentUpdate">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="260dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/edit_data"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTitleInput"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:layout_constraintTop_toBottomOf="@+id/textID"
                    android:layout_marginTop="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/masukkan_judul"
                        android:textSize="14sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNoteInput"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    app:layout_constraintTop_toBottomOf="@+id/tilTitleInput"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/masukkan_catatan"
                        android:textSize="14sp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUpdate"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:text="@string/update"
                    android:textSize="12sp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tilNoteInput"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>