<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.fragment.DialogFragmentDelete">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/hapus_data"
                    android:textSize="16sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDelete"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:text="@string/hapus"
                    android:textSize="12sp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textID"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnCancel"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCancel"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:text="@string/cancel"
                    android:textSize="12sp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textID"
                    app:layout_constraintStart_toEndOf="@+id/btnDelete"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>